# 3D-Surface-Plotter

./: CMakeLists.txt  GLProgram.cpp  GLProgram.h  README.md  Shader.cpp  Shader.h  SurfacePlotter.cpp  SurfacePlotter.h  fragmentShader.fs  main.cpp  vertexShader.vs
include/: Camera.h  GLProgram.h  Shader.h  SurfacePlotter.h
shaders/: fragmentShader.fs  vertexShader.vs  whiteFragmentShader.fs
src/: Camera.cpp  GLProgram.cpp  Shader.cpp  SurfacePlotter.cpp  glad.c  main.cpp
